--- a/BreastCancer.ipynb
+++ b/BreastCancer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled41.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+rmxsdBtNqwQQ/MwiDr6Y",
+      "authorship_tag": "ABX9TyPQrLVyxPoqwTn8fxtSte5K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HCMnMOCPXi1C"
+        "id": "X7sRUoVBi3OV"
       },
       "source": [
         "import numpy as np\n",
@@ -50,50 +50,10 @@
         "from time import time\n",
         "\n",
         "\n",
-        "sns.set_style(\"darkgrid\")\n",
-        "\n"
+        "sns.set_style(\"darkgrid\")\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fVpov0qTbNOw",
-        "outputId": "34aa41fe-0d5c-408e-d50e-93ac58438be9"
-      },
-      "source": [
-        "pip install swiftviz"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting swiftviz\n",
-            "  Downloading https://files.pythonhosted.org/packages/b6/69/8e3861126cc4fa2907ffa62aa45dea2918453bb8f8b69f9c44a4d3479ec8/swiftviz-0.0.1-py3-none-any.whl\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from swiftviz) (1.19.5)\n",
-            "Requirement already satisfied: plotly in /usr/local/lib/python3.6/dist-packages (from swiftviz) (4.4.1)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from swiftviz) (1.1.5)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from swiftviz) (3.2.2)\n",
-            "Requirement already satisfied: seaborn in /usr/local/lib/python3.6/dist-packages (from swiftviz) (0.11.1)\n",
-            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly->swiftviz) (1.3.3)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from plotly->swiftviz) (1.15.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas->swiftviz) (2.8.1)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->swiftviz) (2018.9)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->swiftviz) (1.3.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->swiftviz) (0.10.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->swiftviz) (2.4.7)\n",
-            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.6/dist-packages (from seaborn->swiftviz) (1.4.1)\n",
-            "Installing collected packages: swiftviz\n",
-            "Successfully installed swiftviz-0.0.1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1781,7 +1741,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JIr82j76iIAk",
-        "outputId": "070aadb1-f8c0-4841-8628-07c5cf0f4e60"
+        "outputId": "cf869b28-ca0c-4184-a926-bb3d7d29ab52"
       },
       "source": [
         "#-----logistic lasso \n",
@@ -1795,11 +1755,91 @@
         "clf.C_\n",
         "\n"
       ],
-      "execution_count": 19,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
+            "\n",
+            "The max_iter was reached which means the coef_ did not converge\n",
+            "\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning:\n",
             "\n",
             "The max_iter was reached which means the coef_ did not converge\n",
@@ -2091,13 +2131,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([2.7825594])"
+              "array([10000.])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 64
         }
       ]
     },
