--- a/BreastCancer.ipynb
+++ b/BreastCancer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled41.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPQrLVyxPoqwTn8fxtSte5K",
+      "authorship_tag": "ABX9TyNt/VkNDJcxET4YZPBNZWvC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,17 @@
         "id": "X7sRUoVBi3OV"
       },
       "source": [
+        "pip install swiftviz\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MYUcBrsrjMHM"
+      },
+      "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -43,14 +54,14 @@
         "\n",
         "from sklearn.linear_model import Lasso,LassoCV, lasso_path,LogisticRegression,LogisticRegressionCV \n",
         "\n",
-        "import swiftviz as sv\n",
+        "import swiftviz as sv #pip install \n",
         "from mlxtend.plotting import plot_confusion_matrix\n",
         "\n",
         "from sklearn.svm import l1_min_c\n",
         "from time import time\n",
         "\n",
         "\n",
-        "sns.set_style(\"darkgrid\")\n"
+        "sns.set_style(\"darkgrid\")"
       ],
       "execution_count": null,
       "outputs": []
