--- a/BreastCancer.ipynb
+++ b/BreastCancer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled41.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7xJ7P3v333m7DKmIp/IjU",
+      "authorship_tag": "ABX9TyNYtA5iq1QxNq3t9BZXq9kJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "\n",
         "from sklearn.linear_model import Lasso,LassoCV, lasso_path,LogisticRegression,LogisticRegressionCV \n",
         "\n",
-        "import swiftviz as sv #pip install \n",
+        "import swiftviz as sv #pip install swiftviz\n",
         "from mlxtend.plotting import plot_confusion_matrix\n",
         "\n",
         "from sklearn.svm import l1_min_c\n",
@@ -77,6 +77,8 @@
         "outputId": "62e8049c-6900-4b79-fbc6-26468f4da4fa"
       },
       "source": [
+        "#data is named 'wisconsin-bc.csv' in repository \n",
+        "\n",
         "bcdf = pd.read_csv('wisconsin-bc.csv')\n",
         "bcdf.head()"
       ],
@@ -1774,8 +1776,7 @@
         "id": "gyA2A7NrgNi4"
       },
       "source": [
-        "# a lot of correlation ---> ridge? lasso? elastic net? remove variables?  \n",
-        "# "
+        "# a lot of correlation ---> ridge? lasso? elastic net? remove variables?  \n"
       ],
       "execution_count": null,
       "outputs": []
